plugins {
    id "java"
}

group "ru.craftysoft"
version "1.0.0"

sourceCompatibility = 14

dependencies {
    compile(
            "org.jeasy:easy-random-core:4.2.0"
    )
    testCompile(
            "org.jeasy:easy-random-core:4.2.0",
            "org.junit.jupiter:junit-jupiter:5.6.2",
            "org.assertj:assertj-core:3.15.0",
            "org.mockito:mockito-core:3.3.3"
    )
}

compileJava() {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform {
        excludeEngines "junit-vintage"
    }
    jvmArgs "--enable-preview"
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}
